# yinetd

./: .editorconfig  Cargo.toml  LICENSE-MIT  README.md
configs/: simple-echo.conf
docs/: example.conf
scripts/: build_readme.sh
src/: config.rs  config_types.rs  error.rs  lib.rs  main.rs  num.rs  parse.rs  serve.rs  service.rs
src/config/: config_grammar.pest  mod.rs
src/config/parse/: mod.rs  test.rs
src/parse/: test.rs
src/serve/: mod.rs  service_state.rs  tcp.rs  udp.rs
