[package]
name = "yinetd"
version = "0.0.0"
authors = ["Travis Finkenauer <tmfinken@gmail.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"
description = "inetd implementation"
repository = "https://github.com/tmfink/yinetd"
readme = "README.md"

[dev-dependencies]
once_cell = "1.7"

[dependencies]
anyhow = "1.0"
clap = "3.0.0-beta.2"
env_logger = "0.8"
log = "0.4"
mio = { version = "0.7", features = ["os-poll", "tcp", "udp" ] }
nix = "0.20"
pest = "2.1"
pest_derive = "2.1"
shlex = "1.0"
thiserror = "1.0"
